[package]
name = "moxie-native"
version = "0.1.0"
authors = ["Tiffany Bennett <tiffnixen@gmail.com>"]
edition = "2018"
[profile.dev]
codegen-units=1
[dependencies]
winit = { version = "0.20.0-alpha4", features = ["stdweb" ]}
gleam = "0.6.2"
glutin = { git = "https://github.com/cmr/glutin", branch="web"}#"0.22.0-alpha5"
scopeguard = "1"
euclid = "0.20.3"
slotmap = "0.4"
font-kit = {git="https://github.com/cmr/font-kit.git", branch="web"}
proc-macro-hack = "0.5"

[dependencies.webrender]
git = "https://github.com/cmr/webrender.git"
branch = "web"

[dependencies.illicit]
git = "https://github.com/anp/moxie.git"
rev = "9657631b7d2300b834087f3b0c4dc3f840ed7c4d"

[dependencies.moxie]
git = "https://github.com/anp/moxie.git"
rev = "9657631b7d2300b834087f3b0c4dc3f840ed7c4d"

[dependencies.topo]
git = "https://github.com/anp/moxie.git"
rev = "9657631b7d2300b834087f3b0c4dc3f840ed7c4d"

[dependencies.skribo]
git = "https://github.com/cmr/skribo.git"
branch = "web"

[dependencies.moxie-native-style]
path = "./style"

[patch.'https://github.com/anp/moxie.git']
mox = { path = "./mox" }

[workspace]
members = [
    "devtools",
    "devtools_example"
]
